src/objects/Expert__c.object
<CustomObject>
    <fields>
        <fullName>Account_ONESFID__c</fullName>
        <description>The OneSFID from the related account so that we can bring in and filter a sales dashboard.</description>
        <formula>Contact__r.Account_OneSF_Number__c</formula>
        <label>Account ONESFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advisors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ambassador__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ambassador</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Exception_Value__c</fullName>
        <description>The maximum value of approved exceptions</description>
        <inlineHelpText>Shows the highest approved and active exception value for this KOL</inlineHelpText>
        <label>Approved Higher Exception Value</label>
        <summarizedField>FMV_Exception_request__c.Requested_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>FMV_Exception_request__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FMV_Exception_request__c.Exception_Type__c</field>
            <operation>equals</operation>
            <value>Higher</value>
        </summaryFilterItems>
        <summaryForeignKey>FMV_Exception_request__c.KOL_information__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approved_Lower_Exception_Value__c</fullName>
        <description>Shows the lowest approved value existing for this KOL</description>
        <label>Approved Lower Exception Value</label>
        <summarizedField>FMV_Exception_request__c.Requested_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>FMV_Exception_request__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FMV_Exception_request__c.Exception_Type__c</field>
            <operation>equals</operation>
            <value>Lower</value>
        </summaryFilterItems>
        <summaryForeignKey>FMV_Exception_request__c.KOL_information__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Associate_or_Assistant_Professor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Associate or Assistant Professor at a college or university that is accredited by an independent agency such as the Commission on Dental Accreditation</inlineHelpText>
        <label>Associate or Assistant Professor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board_of_directors_of_a_Fortune_500__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Member of a board of directors of a Fortune 500 company. Present to Past 10 years.</inlineHelpText>
        <label>Board of directors of a Fortune 500</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CadCamBetaTester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAD CAM Beta Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cad_Cam__c</fullName>
        <label>Cad Cam</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CEREC Omnciam AC</fullName>
                    <label>CEREC Omnicam AC</label>
                </value>
                <value>
                    <fullName>CEREC Omnciam AF</fullName>
                    <label>CEREC Omnicam AF</label>
                </value>
                <value>
                    <fullName>CEREC Omnciam AI</fullName>
                    <label>CEREC Omnicam AI</label>
                </value>
                <value>
                    <fullName>CEREC Omnciam Connect DI</fullName>
                    <label>CEREC Omnicam Connect DI</label>
                </value>
                <value>
                    <fullName>CEREC Primescan</fullName>
                </value>
                <value>
                    <fullName>CEREC PrimeMill</fullName>
                </value>
                <value>
                    <fullName>CEREC Software</fullName>
                </value>
                <value>
                    <fullName>Connect Software</fullName>
                </value>
                <value>
                    <fullName>CEREC Ortho Software</fullName>
                </value>
                <value>
                    <fullName>CEREC Milling Units MC / MC X</fullName>
                </value>
                <value>
                    <fullName>CEREC Milling Units  XL  / MC X</fullName>
                </value>
                <value>
                    <fullName>CEREC Milling Units  PP / MC X</fullName>
                </value>
                <value>
                    <fullName>CEREC SpeedFire</fullName>
                </value>
                <value>
                    <fullName>CEREC Zirconia incl. CEREC Zirconia Meso</fullName>
                </value>
                <value>
                    <fullName>DS Hub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certified_dental_technician__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified dental technician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinical_Technical_Expert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clinical Technical Expert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinical_decision_maker__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Clinical leader responsible for overseeing patient care and/or clinical operations for group practices/national health clinics</inlineHelpText>
        <label>Clinical decision maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinician_or_scientist_with_2_to_5_years__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Clinician, scientist, hygienist, dental assistant, lab technician with 2 to 5 years of experience, and a high level of practical and/or clinical experience.</inlineHelpText>
        <label>2 to 5 years experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Committee_Chair_of_a_prof_org__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Committee Chair of a professional organization of association. Present to Past 10 years.</inlineHelpText>
        <label>Committee Chair of a prof. org. of assoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>KOL information</relationshipLabel>
        <relationshipName>KOL_information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Content_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(Contact__r.Account.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dean_senior_university_administator_or__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dean, senior university administator or professor at a distinguished university. See https://www.topuniversities.com/university-rankings-articles/university-subject-rankings/top-dental-schools-2018</inlineHelpText>
        <label>Dean, senior administator or  professor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_Hygiene_Faculty_Position_Natiojna__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dental hygienist, Dental Lab Technician or Dental Assistant Faculty Position at a dental school program that is accredited by an independent agency such as CODA.</inlineHelpText>
        <label>Dental Hygiene Faculty Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_Hygiene_Faculty_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dental hygienist, dental lab technician or dental assistant faculty position at a dental school program that is accredited by an independent agency such as CODA.</inlineHelpText>
        <label>Dental Hygiene Faculty Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Designer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Designer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Experience_Advanced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User experience with advanced digital, dental equipment, or consumable dental products introduced in the last ten years, with proven ability to effectively train their dental peers AND experience in both science and technology transfer/product development</inlineHelpText>
        <label>Digital Experience - Advanced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Experience_Trainer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User experience with digital, dental equipment, or consumable dental products that have been introduced in the last ten years, with proven ability to effectively train their dental provider peers.</inlineHelpText>
        <label>Digital Experience - Trainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Experience__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User experience with digital, dental equipment, or consumable dental products that have been introduced in the last ten years.</inlineHelpText>
        <label>Digital Experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Director_or_similar_in_area_of_expertise__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Director or similar position in a specialized area of expertise</inlineHelpText>
        <label>Director or similar in area of expertise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIBetaTester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E &amp; I Beta Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_opt_out__c</fullName>
        <formula>Contact__r.HasOptedOutOfEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email opt out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emerging_Researcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emerging Researcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emerging_Speaker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emerging Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endodontics_specialties__c</fullName>
        <inlineHelpText>Select the specialties for Endodontics SBU</inlineHelpText>
        <label>Endodontics specialties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Protaper NEXT</fullName>
                </value>
                <value>
                    <fullName>Hands Files</fullName>
                </value>
                <value>
                    <fullName>Protaper GOLD</fullName>
                </value>
                <value>
                    <fullName>WaveOne GOLD</fullName>
                </value>
                <value>
                    <fullName>X-Smart PLUS</fullName>
                </value>
                <value>
                    <fullName>X-Smart IQ</fullName>
                </value>
                <value>
                    <fullName>Proglider</fullName>
                </value>
                <value>
                    <fullName>GuttaCore</fullName>
                </value>
                <value>
                    <fullName>Calamus</fullName>
                </value>
                <value>
                    <fullName>GuttaSmart</fullName>
                </value>
                <value>
                    <fullName>Vortex Blue</fullName>
                </value>
                <value>
                    <fullName>TruNatomy</fullName>
                </value>
                <value>
                    <fullName>BeeFill 2 in 1</fullName>
                    <isActive>false</isActive>
                    <label>BeeFill 2 in 1</label>
                </value>
                <value>
                    <fullName>Eddy</fullName>
                    <isActive>false</isActive>
                    <label>Eddy</label>
                </value>
                <value>
                    <fullName>FlexMaster</fullName>
                    <isActive>false</isActive>
                    <label>FlexMaster</label>
                </value>
                <value>
                    <fullName>Guttafushion</fullName>
                    <isActive>false</isActive>
                    <label>Guttafushion</label>
                </value>
                <value>
                    <fullName>Mtwo</fullName>
                    <isActive>false</isActive>
                    <label>Mtwo</label>
                </value>
                <value>
                    <fullName>R-Pilot</fullName>
                    <isActive>false</isActive>
                    <label>R-Pilot</label>
                </value>
                <value>
                    <fullName>Reciproc</fullName>
                    <isActive>false</isActive>
                    <label>Reciproc</label>
                </value>
                <value>
                    <fullName>Reciproc Blue</fullName>
                    <isActive>false</isActive>
                    <label>Reciproc Blue</label>
                </value>
                <value>
                    <fullName>VDW Endo System</fullName>
                    <isActive>false</isActive>
                    <label>VDW Endo System</label>
                </value>
                <value>
                    <fullName>VDW.Ultra</fullName>
                    <isActive>false</isActive>
                    <label>VDW.Ultra</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expert_Bio_english__c</fullName>
        <inlineHelpText>Add the biography of this Expert, to be used as a base for presentations etc. for this Expert. NOTE: Be aware of Data Privacy regulations and make sure yo have consent and valid business reasons to store the information.</inlineHelpText>
        <label>Expert Bio (English)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expert_Bio_local__c</fullName>
        <inlineHelpText>Add the biography of this Expert, to be used as a base for presentations etc. for this Expert. NOTE: Be aware of Data Privacy regulations and make sure yo have consent and valid business reasons to store the information.</inlineHelpText>
        <label>Expert Bio (local)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expert_Role__c</fullName>
        <inlineHelpText>Add the Expert Roles this expert has</inlineHelpText>
        <label>Expert Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisors</fullName>
                </value>
                <value>
                    <fullName>Ambassador</fullName>
                </value>
                <value>
                    <fullName>Clinical Technical Expert</fullName>
                </value>
                <value>
                    <fullName>Content Provider</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Emerging Researcher</fullName>
                </value>
                <value>
                    <fullName>Emerging Speaker</fullName>
                </value>
                <value>
                    <fullName>Field Tester</fullName>
                </value>
                <value>
                    <fullName>International Researcher</fullName>
                </value>
                <value>
                    <fullName>International Speaker</fullName>
                </value>
                <value>
                    <fullName>International Thought Leader</fullName>
                </value>
                <value>
                    <fullName>Inventor</fullName>
                </value>
                <value>
                    <fullName>Lab Expert</fullName>
                </value>
                <value>
                    <fullName>Lab Messenger</fullName>
                </value>
                <value>
                    <fullName>National Advisor</fullName>
                </value>
                <value>
                    <fullName>National Researcher</fullName>
                </value>
                <value>
                    <fullName>National Speaker</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Product Evaluator</fullName>
                </value>
                <value>
                    <fullName>Publisher</fullName>
                </value>
                <value>
                    <fullName>Researcher</fullName>
                </value>
                <value>
                    <fullName>Sales Training</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
                <value>
                    <fullName>Study Club Member</fullName>
                </value>
                <value>
                    <fullName>Train the Trainer Educator</fullName>
                </value>
                <value>
                    <fullName>Trainer the Trainer Program Participant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMV_exception_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in approval process and will be checked if approved for exception to FMV</description>
        <inlineHelpText>If checked this KOL is approved for an exception to FMV defined payments</inlineHelpText>
        <label>FMV exception approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Non-Binary</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GlobalKOL__c</fullName>
        <description>Used to identify if a KOL is a global KOL.
Definition of a global KOL is if they are either an international speaker, a thought leader or an inventor. Used in KOL KPI reporting</description>
        <formula>IF(OR( International_Speaker__c , Thought_Leader__c , Inventor__c ), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to identify if a KOL is a global KOL.
Definition of a global KOL is if they are either an international speaker, a thought leader or an inventor.</inlineHelpText>
        <label>Global KOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hygienist_with_5_years_experience__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hygienist with more than 5 years consulting or business managmenet experience</inlineHelpText>
        <label>Hygienist with &gt;5 years experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hygienist_with_director_level_experience__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hygienist with director level experience within group practice/group national health clinics</inlineHelpText>
        <label>Hygienist with director level experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Imaging__c</fullName>
        <label>Imaging</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Orthophos SL</fullName>
                </value>
                <value>
                    <fullName>Orthophos XG</fullName>
                </value>
                <value>
                    <fullName>Galileos</fullName>
                </value>
                <value>
                    <fullName>Sidexis 4</fullName>
                </value>
                <value>
                    <fullName>Sidexis 4 v. 4.3</fullName>
                </value>
                <value>
                    <fullName>Sidexis XG</fullName>
                </value>
                <value>
                    <fullName>Sidexis iX</fullName>
                </value>
                <value>
                    <fullName>3D Endo</fullName>
                </value>
                <value>
                    <fullName>Galileos Implant</fullName>
                </value>
                <value>
                    <fullName>Heliodent</fullName>
                </value>
                <value>
                    <fullName>Xios XG Select</fullName>
                </value>
                <value>
                    <fullName>Xios XG Supreme</fullName>
                </value>
                <value>
                    <fullName>SiroCam</fullName>
                </value>
                <value>
                    <fullName>SiroLaser AdvancePlus</fullName>
                </value>
                <value>
                    <fullName>SICAT Air</fullName>
                </value>
                <value>
                    <fullName>SICAT Endo</fullName>
                </value>
                <value>
                    <fullName>SICAT Function</fullName>
                </value>
                <value>
                    <fullName>SICAT Suite</fullName>
                </value>
                <value>
                    <fullName>SICAT Suite v. 1.4</fullName>
                </value>
                <value>
                    <fullName>Schick Elite</fullName>
                </value>
                <value>
                    <fullName>Schick AE</fullName>
                </value>
                <value>
                    <fullName>Schick 33</fullName>
                </value>
                <value>
                    <fullName>Fona</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implants_Specialties__c</fullName>
        <inlineHelpText>Select the specialties for Implants SBU</inlineHelpText>
        <label>Implants Specialties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ankylos</fullName>
                </value>
                <value>
                    <fullName>Astra Tech Implant SystemTX</fullName>
                    <label>Astra Tech Implant System TX</label>
                </value>
                <value>
                    <fullName>Astra Tech Implant System Profile</fullName>
                </value>
                <value>
                    <fullName>Astra Tech Implant System EV</fullName>
                </value>
                <value>
                    <fullName>Astra Tech Implant System EV with SmartFix</fullName>
                </value>
                <value>
                    <fullName>Smartfix</fullName>
                </value>
                <value>
                    <fullName>XiVE</fullName>
                </value>
                <value>
                    <fullName>ATLANTIS Abutments</fullName>
                </value>
                <value>
                    <fullName>ATLANTIS Suprastructures</fullName>
                </value>
                <value>
                    <fullName>SIMPLANT Software</fullName>
                </value>
                <value>
                    <fullName>SIMPLANT Hardware</fullName>
                </value>
                <value>
                    <fullName>Frios</fullName>
                </value>
                <value>
                    <fullName>Symbios</fullName>
                </value>
                <value>
                    <fullName>WeldOne</fullName>
                </value>
                <value>
                    <fullName>MySimplant</fullName>
                </value>
                <value>
                    <fullName>Azento</fullName>
                </value>
                <value>
                    <fullName>Acuris</fullName>
                    <label>Acuris Conical Abutments</label>
                </value>
                <value>
                    <fullName>Ossix</fullName>
                </value>
                <value>
                    <fullName>Conus</fullName>
                </value>
                <value>
                    <fullName>Digital workflow</fullName>
                </value>
                <value>
                    <fullName>MIS – C1</fullName>
                </value>
                <value>
                    <fullName>MIS – V3</fullName>
                </value>
                <value>
                    <fullName>MIS – Seven</fullName>
                </value>
                <value>
                    <fullName>MIS – Lance</fullName>
                </value>
                <value>
                    <fullName>MGuide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the KOL is no longer active as KOL but we still want to keep information if re-activated again.</description>
        <inlineHelpText>Checked if the KOL is no longer active as KOL.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instruments__c</fullName>
        <label>Instruments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Speed Air-Driven Handpieces</fullName>
                </value>
                <value>
                    <fullName>Low-Speed Air-Driven Handpieces</fullName>
                </value>
                <value>
                    <fullName>Electric Systems and Attachments</fullName>
                </value>
                <value>
                    <fullName>Handpiece Maintenance</fullName>
                </value>
                <value>
                    <fullName>Rotary (Burs and Diamonds)</fullName>
                </value>
                <value>
                    <fullName>Sirolaser Blue</fullName>
                </value>
                <value>
                    <fullName>Sirolaser Advanced Plus</fullName>
                </value>
                <value>
                    <fullName>Midwest Mini</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntegratedDigitalWorkflows__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>General Dentists/Specialists with 5+ years of experience working in clinical practice, or supporting a clinical practice as a hygienist, lab technician, dental assistant or radiologist, that offers digitally facilitated workflow procedures in aligners, implants, endodontic and restorative procedures OR serves in a key influential position (Ex: Dept Chair) at a university dental school that is focused on digital dentistry.</inlineHelpText>
        <label>Supports Integrated Digital Workflows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Speaker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KOL_Email__c</fullName>
        <inlineHelpText>Add if a specific email is used when this person is working as expert (if not specific the general email should be added to the contact)</inlineHelpText>
        <label>KOL Email (PRIMARY)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lab_Expert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lab Expert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lab_Messenger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lab Messenger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lectured_10_times_in_prior_5_years__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Five or more times in prior 5 years on a clinical or scientific topic at national level.
5+ times on a local level.</inlineHelpText>
        <label>Lectured 5+ times in prior 5 years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lectured_5_at_dental_meetings__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Lectured 5+ at international dental meetings</inlineHelpText>
        <label>Lectured 5+ at dental meetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lectured_5_times_in_prior_5_years__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Less than 5 on a local level, CE or product training events.</inlineHelpText>
        <label>Lectured &lt;5 times in prior 5 years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Technician_Lab_Owne__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Master Technician/Lab Owners with 5+ years experience with conventional/ digital workflows, development &amp; evaluation</inlineHelpText>
        <label>Master Technicican/Lab Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_national_international_think_tank__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Member of a national or international think tank or similar organization. Present to Past 10 years.</inlineHelpText>
        <label>Member national/international think tank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Required by clinical affairs to capture mobile phone only accessible to them but not other users.</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>More_than_5_years_experience__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>5+ years’ experience as clinician, scientist, dental hygienist, dental assistant, or lab tech.</inlineHelpText>
        <label>More than 5 years experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_State_License_1__c</fullName>
        <label>NA: State License # 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_State_License_2__c</fullName>
        <label>NA: State License # 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_State_License_3__c</fullName>
        <label>NA: State License # 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_State_Licensure_1__c</fullName>
        <label>NA: State Licensure 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NA_State_Licensure_2__c</fullName>
        <label>NA: State Licensure 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NA_State_Licensure_3__c</fullName>
        <label>NA: State Licensure 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
</CustomObject>